# clib

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  LICENSE  README.md  build.zig
.github/workflows/: BuildTest.yml  cmake.yml
cmake/: .clangd.in  file_selector.cmake  module_selector.cmake  options.cmake  try_compile_define_template.c.in  utils.cmake
cmake/cpuid/: .gitignore  cpuid_supported.c  generate_header.cmake  generate_header.py  table.csv
doxygen/: Doxyfile.in
include/: .gitignore  clib.h  clib_array.h  clib_c90_support.h  clib_constructor.h  clib_cpuid.h  clib_cpuid_checks.h  clib_data_structures.h  clib_endianess.h  clib_error.h  clib_file.h  clib_io.h  clib_lua.h  clib_math.h  clib_memory.h  clib_sockets.h  clib_string.h  clib_vector.h
include/cpuid/: .gitignore  clib_checks.h
include/data_structures/: clib_binary_heap.h  clib_list.h  clib_set.h  clib_stack.h
src/: clib_array.c  clib_data_structures.c  clib_error.c  clib_file.c  clib_file_selector.c  clib_io.c  clib_math.c  clib_memory.c  clib_sockets.c  clib_string.c  main.c
src/array/: clib_array.c
src/cpuid/: .gitignore  CMakeLists.txt  clib_cpuid.c  clib_cpuid_checks.c
src/data_structures/: clib_data_structures.c  clib_data_structures_heap.c  clib_data_structures_list.c  clib_data_structures_tree.c  clib_data_structures_tree.h  clib_data_structures_union_find.c  clib_heap.c  clib_list.c  clib_stack.c  clib_tree.c  clib_tree.h  clib_union_find.c
src/endianess/: clib_endianess.c
src/error/: clib_error.c
src/file/: clib_file.c
src/file_selector/: CMakeLists.txt
src/io/: clib_io.c
src/lua/: CMakeLists.txt  clib_lua.c
src/lua/cmake/: luajit.cmake
src/math/: CMakeLists.txt  clib_math.c
src/memory/: CMakeLists.txt  clib_memory.c
src/sockets/: CMakeLists.txt  clib_sockets.c
src/string/: clib_string.c
src/vector/: clib_vector.c
tcc/: makefile.in
tests/: CMakeLists.txt  main.c  test_clib_cpuid.c  test_clib_data_structures.c  test_clib_lua.c  test_clib_math.c  test_clib_memory.c  test_clib_sockets.c  test_clib_string.c
tests/include/: test_clib_string.h
