cmake_minimum_required(VERSION 3.12.0)

set(FULL_PATH "${CMAKE_CURRENT_SOURCE_DIR}")
get_filename_component(PROJ_NAME "${FULL_PATH}" NAME)
string(TOUPPER "${PROJ_NAME}" PROJ_NAME_UPPER)

project(
  clib_${PROJ_NAME}
  VERSION 1.0.0
  HOMEPAGE_URL "https://github.com/NilEis/clib"
  LANGUAGES C)

include(${CMAKE_CURRENT_SOURCE_DIR}/cmake/luajit.cmake)

file(GLOB ${PROJECT_NAME}_SRCS ${CMAKE_CURRENT_SOURCE_DIR}/*.c)

if(NOT TARGET ${PROJECT_NAME})
  add_library(${PROJECT_NAME} OBJECT ${${PROJECT_NAME}_SRCS} ${luajit_headers})
  target_link_libraries(${PROJECT_NAME} PUBLIC ${lualib})
  target_include_directories(${PROJECT_NAME} PRIVATE ${luaInclude})
  add_dependencies(${PROJECT_NAME} luajit)
endif()

string(APPEND CLIB_SELECTED_MODULES " ${PROJECT_NAME}")
set(CLIB_SELECTED_MODULES
    ${CLIB_SELECTED_MODULES}
    PARENT_SCOPE)

list(APPEND CLIB_COMPILE_DEFINITIONS_PUB CLIB_INCLUDE_${PROJ_NAME_UPPER})
set(CLIB_COMPILE_DEFINITIONS_PUB
    ${CLIB_COMPILE_DEFINITIONS_PUB}
    PARENT_SCOPE)

list(APPEND CLIB_MODULES_LIST ${PROJECT_NAME})
set(CLIB_MODULES_LIST
    ${CLIB_MODULES_LIST}
    PARENT_SCOPE)

list(APPEND CLIB_LIBRARY_LIST ${lualib})
set(CLIB_LIBRARY_LIST
    ${CLIB_LIBRARY_LIST}
    PARENT_SCOPE)

list(APPEND CLIB_SOURCE_FILES_LIST $<TARGET_OBJECTS:${PROJECT_NAME}>)
set(CLIB_SOURCE_FILES_LIST
    ${CLIB_SOURCE_FILES_LIST}
    PARENT_SCOPE)
